[package]
name = "byawn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getset = "0.1.2"
log = "0.4.20"
# pollster should be a dev-dependency but i dont wanna make my shitty main hack better
pollster = "0.3.0"
thiserror = "1.0.49"
tracing = "0.1.37"
wgpu = "0.17.1"
winit = "0.28.7"
